--- a/404.md
+++ b/404.md
@@ -4,3 +4,4 @@ title: 404
 permalink: /404.html
 ---
 Page not found.
+<meta http-equiv="refresh" content="1; URL='{{ site.baseurl }}/projects/adsr'" />
