Set defaults for ad;sr

--- a/404.md
+++ b/404.md
@@ -3,4 +3,5 @@ layout: page
 title: 404
 permalink: /404.html
 ---
-Page not found.
+Redirecting...
+<meta http-equiv="refresh" content="0; URL='{{ site.baseurl }}/scores/adsr'" />
